updated Gaja3dService, Client and WPS inputs